--- a/app/src/main/res/layout/activity_dua.xml
+++ b/app/src/main/res/layout/activity_dua.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Parcel.Dua">
+    tools:context=".parcel.Dua">
 
     <TextView
         android:id="@+id/OParcel1"
