--- a/app/src/main/res/layout/activity_outbml.xml
+++ b/app/src/main/res/layout/activity_outbml.xml
@@ -2,27 +2,30 @@
 <LinearLayout
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".parcel.Satu">
+    tools:context=".parcel.Outbml">
 
-    <EditText
-        android:id="@+id/parcel"
-        android:hint="Panjang"
+    <TextView
+        android:text="Hasil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/OutBb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <EditText
-        android:hint="Lebar"
-        android:id="@+id/parcelsatu"
+    <TextView
+        android:id="@+id/OutTb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <Button
-        android:text="hitung"
-        android:id="@+id/gasparcel"
+    <TextView
+        android:id="@+id/OutIMT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </LinearLayout>
